Fix T45737: Vertex colors show washed-out

Blender-Internal and GLSL-nodes missed converting sRGB to linear color.